--- a/modal.html
+++ b/modal.html
@@ -22,10 +22,10 @@
             <h2 class="blind">로그인 섹션</h2>
             <p class="login-text">위니브에서 여러분의 궁금증을 해결하세요! :)</p>
             <form class="content-loginform" action="" method="get">
-                <input class="login-id" type="text" id="id" name="id"  placeholder="아이디">
-                <input class="login-pw" type="password" id="pw" name="pw"  placeholder="비밀번호">
-                <input class="login-checkbox" id="login-checkbox" type="image" src="images/check-box.png">
-                <label class="checkbox-label" for="login-checkbox">로그인 상태 유지</label>
+                <input class="login-id" type="text" id="id" name="id" placeholder="아이디">
+                <input class="login-pw" type="password" id="pw" name="pw" placeholder="비밀번호">
+                <input class="login-checkbox" id="login-checkbox" type="checkbox">
+                <label class="checkbox-label" for="login-checkbox"><span></span>로그인 상태 유지</label>
                 <input class="login-button" type="submit" value="로그인">
             </form>
             <div class="wrap-link">
@@ -61,6 +61,12 @@
             </ul>
         </section>
     </main>
+
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+
+    </script>
 </body>
 
 </html>
