--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,13 @@
     <link rel="stylesheet" href="main.css">
     <title>로그인 화면</title>
 </head>
+
 <body>
     <article class="content-move-login">
-        <h1 class="blind">위니브 로그인창</h1>
-        <img class="move-login-logo" src="images/weniv-logo.png" alt="위니브">
+        <h1><img class="move-login-logo" src="images/weniv-logo.png" alt="위니브 로고"></h1>
         <p class="move-login-text">위니브를 더 즐겁고 편리하게 이용하세요.</p>
         <a href="modal.html" class="move-login-button">로그인</a>
     </article>
 </body>
+
 </html>
