--- a/modal.html
+++ b/modal.html
@@ -12,28 +12,29 @@
 
 <body>
     <header class="content-header">
-        <h1 class="header-title">로그인 또는 회원가입</h1>
-        <a href="" class="link-close">
-            <img class="img-close" src="images/close.png" alt="닫기">
-        </a>
+        <h2 class="header-title">로그인 또는 회원가입</h3>
     </header>
-    <main class="content-main">
+    <article class="content-main">
+        <h2 class="blind">회원가입, 로그인 또는 소셜서비스로 로그인</h2>
         <section class="content-login">
-            <h2 class="blind">로그인 섹션</h2>
+            <h3 class="blind">로그인 섹션</h3>
             <p class="login-text">위니브에서 여러분의 궁금증을 해결하세요! :)</p>
             <form class="content-loginform" action="" method="get">
-                <input class="login-id" type="text" id="id" name="id" placeholder="아이디">
-                <input class="login-pw" type="password" id="pw" name="pw" placeholder="비밀번호">
+                <label for="input-id" class="blind">아이디</label>
+                <input class="login-id" type="text" id="input-id" name="id" placeholder="아이디">
+                <label for="input-pw" class="blind"></label>
+                <input class="login-pw" type="password" id="input-pw" name="pw" placeholder="비밀번호">
                 <input class="login-checkbox" id="login-checkbox" type="checkbox">
                 <label class="checkbox-label" for="login-checkbox"><span></span>로그인 상태 유지</label>
                 <input class="login-button" type="submit" value="로그인">
-            </form>
+            
             <div class="wrap-link">
                 <a href="" class="link-signup">회원가입</a>
-                |
+                <span class="line"></span>
                 <a href="" class="link-find">아이디/비밀번호찾기</a>
             </div>
-            <div class="line-separator">또는</div>
+        </form>
+            <div class="line-separator">또는</siv>
         </section>
         <section class="content-others">
             <h2 class="blind">다른 계정으로 로그인</h2>
@@ -60,13 +61,8 @@
                 </li>
             </ul>
         </section>
-    </main>
-
-    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
-
-    </script>
+        <a href="index.html" class="btn-close"><img class="btn-img" src="images/close.png" alt="로그인 닫기"></a>
+    </article>
 </body>
 
 </html>
